# Automation-through-Replit

./: .gitignore  .replit  build_and_run.sh  build_frontend.sh  flask_app.py  init_db.py  main.py  package-lock.json  package.json  pyproject.toml
backend/: manage.py  requirements.txt
backend/api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/warehouse_admin/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: AnnouncementForm.js  Announcements.js  Dashboard.js  Header.js  Login.js  Sidebar.js  UserForm.js  Users.js  WarehouseForm.js  Warehouses.js
frontend/src/store/: actions.js  index.js  reducers.js
frontend/src/styles/: main.css
frontend/src/utils/: api.js  auth.js
templates/: 403.html  404.html  500.html  announcements.html  base.html  dashboard.html  index.html  login.html  users.html  warehouses.html
